--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,39 @@
-.DS_Store
-node_modules
+# Git ignore configuration - 2020
+
 /dist
 
-# local env files
-.env.local
-.env.*.local
+# Dependency directories
+/node_modules
+/.pnp
+.pnp.js
 
-# Log files
+# testing
+/coverage
+
+# Optional eslint cache
+.eslintcache
+
+# production
+/build
+
+# misc
+.DS_Store
+
+# dotenv environment variables file
+.env
+.env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
 # Editor directories and files
 .idea
@@ -19,3 +43,5 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+
